# virtualpytest

./: .dockerignore  .env.example  .gitignore  AICentral.md  AI_NEW.md  AI_TESTCASE_HOST_FIX.md  AUDIO_DETECTION_FLOW.md  AUTOMATIC_RUNNING_LOG_COMPLETE.md  AUTOMATIC_ZAPPING_ARCHITECTURE.md  AUTO_PROXY_IMPLEMENTATION.md  CAMPAIGN_SYSTEM_GUIDE.md  COMBINED_TREE_METRICS_ENDPOINT.md  CONTROLLER_ARCHITECTURE.md  DASHBOARD_MOBILE_IMPLEMENTATION.md  DASHBOARD_MOBILE_PLAN.md  DATABASE_MIGRATION_COMPLETED.md  DECORATOR_ARCHITECTURE.md  DECORATOR_MIGRATION_PLAN.md  EDGE_MIGRATION_COMPLETED.md  FAILURE_ACTION_IMPLEMENTATION_PLAN.md  FRONTEND_MIGRATION_PLAN.md  GOOGLE_TRANSLATE_OPTIMIZATION_PLAN.md  HOT_COLD_ARCHITECTURE.md  HOT_COLD_ARCHIVER_FIXES.md  INCIDENT_IMAGE_UNIFIED_ARCHITECTURE.md  INCIDENT_SYSTEM_CHANGES.md  INOTIFY_IMPLEMENTATION.md  LANGUAGE_MENU_INTEGRATION_COMPLETE.md  LICENSE  LINK_INDICATORS_SUMMARY.md  MCP_PLAYGROUND_ARCHITECTURE.md  MEMORY_LEAK_FIX.md  METADATA_FIX_SUMMARY.md  MIGRATION_ASSESSMENT.md  MIGRATION_IMPORT_PLAN.md  MIGRATION_NOTES.md  MIGRATION_PLAN.md  MIGRATION_SUCCESS_SUMMARY.md  NAVIGATION_MIGRATION_PLAN.md  NAVIGATION_REFACTOR_PLAN.md  (+68 more)
backend_core/: Dockerfile  README.md  pyproject.toml
backend_core/examples/: README.md  goto_live_fullscreen.py
backend_core/src/controllers/: __init__.py  base_controller.py  controller_config_factory.py  controller_manager.py
shared/: .env.example  Dockerfile  README.md  __init__.py  env.example  pyproject.toml  requirements.txt  setup.py.bak
shared/lib/: __init__.py
shared/lib/ai/: __init__.py  ai_service.py
shared/lib/config/: __init__.py  device_resolutions.py
shared/lib/mcp/: __init__.py  mcp_server.py
shared/lib/models/: __init__.py  device.py  host.py
shared/lib/supabase/: __init__.py  actions_db.py  ai_analysis_cache_db.py  alerts_db.py  campaign_db.py  campaign_executions_db.py  campaign_results_db.py  controllers_db.py  device_models_db.py  devices_db.py  environment_profiles_db.py  execution_results_db.py  heatmap_db.py  navigation_metrics_db.py  navigation_trees_db.py  script_results_db.py  system_metrics_db.py  testcase_db.py  userinterface_db.py  verifications_db.py  verifications_references_db.py  zap_results_db.py
shared/src/: selector_scoring.py
shared/virtualpytest_shared.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+2361 files in other folders)
