[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virtualpytest-backend_core"
version = "1.0.0"
description = "Backend core service for VirtualPyTest - device controllers and business logic"
authors = [{name = "VirtualPyTest Team"}]
requires-python = ">=3.8"
dependencies = [
    # SSH connection support
    "paramiko>=2.9.0",
    # XML parsing for Android UI dumps
    "lxml>=4.6.0",
    # Process management
    "psutil>=5.8.0",
    # Enhanced regex support
    "regex>=2021.0.0",
    # Type hints support
    "typing-extensions>=4.0.0",
    # Navigation pathfinding support
    "networkx>=3.2.1",
    # Language detection
    "langdetect>=1.0.9",
    # Appium WebDriver support for device automation
    "Appium-Python-Client>=3.1.0",
    "selenium>=4.15.0",
    # Desktop automation
    "pyautogui>=0.9.54",
    "pynput>=1.7.6",
    # Image processing
    "Pillow>=9.0.0",
    "opencv-python>=4.5.0",
    # Audio/Video capture and processing
    "ffmpeg-python>=0.2.0",
    # Power control (Tapo devices)
    "PyP100>=0.1.2",
    # Web automation
    "playwright>=1.40.0",
    # Browser automation
    "beautifulsoup4>=4.11.0",
    "requests-html>=0.10.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"] 