[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virtualpytest-shared"
version = "1.0.0"
description = "Shared library for VirtualPyTest microservices"
authors = [{name = "VirtualPyTest Team"}]
requires-python = ">=3.8"
dependencies = [
    "typing-extensions>=4.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "structlog>=23.0.0",
    "python-dateutil>=2.8.0",
    "orjson>=3.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lib*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"] 